SFPracticeApp/main/default/objects/DBR__c/DBR__c.object-meta.xml
<CustomObject>
    <label>Allocation</label>
    <nameField>
        <label>CUSTNAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>