SFPracticeApp/main/default/objects/DBR__c/fields/ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT__c</fullName>
    <label>ACCOUNT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>