SFPracticeApp/main/default/objects/DBR__c/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Link</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DBR</relationshipName>
    <type>Lookup</type>
</CustomField>