SFPracticeApp/main/default/objects/DBR__c/fields/ALLOCATED_AGING_BUCKET__c.field-meta.xml
<CustomField>
    <fullName>ALLOCATED_AGING_BUCKET__c</fullName>
    <label>ALLOCATED_AGING_BUCKET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>