SFPracticeApp/main/default/objects/DBR__c/fields/ALLOCATED_ON__c.field-meta.xml
<CustomField>
    <fullName>ALLOCATED_ON__c</fullName>
    <label>ALLOCATED_ON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>