SFPracticeApp/main/default/objects/DBR__c/fields/Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage__c</fullName>
    <label>Allocation Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>