SFPracticeApp/main/default/objects/DBR__c/fields/APPROVED_INVESTMENT__c.field-meta.xml
<CustomField>
    <fullName>APPROVED_INVESTMENT__c</fullName>
    <label>APPROVED_INVESTMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>