SFPracticeApp/main/default/objects/DBR__c/fields/Assign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_End_Date__c</fullName>
    <label>Assign End Date</label>
    <type>Date</type>
</CustomField>