SFPracticeApp/main/default/objects/DBR__c/fields/Assign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_Start_Date__c</fullName>
    <label>Assign Start Date</label>
    <type>Date</type>
</CustomField>