SFPracticeApp/main/default/objects/DBR__c/fields/Billability_Status__c.field-meta.xml
<CustomField>
    <fullName>Billability_Status__c</fullName>
    <label>Billability  Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>