SFPracticeApp/main/default/objects/DBR__c/fields/BULGE__c.field-meta.xml
<CustomField>
    <fullName>BULGE__c</fullName>
    <label>BULGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>