SFPracticeApp/main/default/objects/DBR__c/fields/CCODE__c.field-meta.xml
<CustomField>
    <fullName>CCODE__c</fullName>
    <label>CCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>