SFPracticeApp/main/default/objects/DBR__c/fields/COMPANY_IDENTIFICATION_FG__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_IDENTIFICATION_FG__c</fullName>
    <label>COMPANY_IDENTIFICATION_FG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>