SFPracticeApp/main/default/objects/DBR__c/fields/CRMREFNO__c.field-meta.xml
<CustomField>
    <fullName>CRMREFNO__c</fullName>
    <label>CRMREFNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>