SFPracticeApp/main/default/objects/DBR__c/fields/DATEOFJOINING__c.field-meta.xml
<CustomField>
    <fullName>DATEOFJOINING__c</fullName>
    <label>DATEOFJOINING</label>
    <type>Date</type>
</CustomField>