SFPracticeApp/main/default/objects/DBR__c/fields/DER_INDENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DER_INDENT_TYPE__c</fullName>
    <label>DER_INDENT_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>