SFPracticeApp/main/default/objects/DBR__c/fields/DERIVED_EMP_GEOGRAPHY__c.field-meta.xml
<CustomField>
    <fullName>DERIVED_EMP_GEOGRAPHY__c</fullName>
    <label>DERIVED_EMP_GEOGRAPHY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>