SFPracticeApp/main/default/objects/DBR__c/fields/DERIVED_SUITE_ID__c.field-meta.xml
<CustomField>
    <fullName>DERIVED_SUITE_ID__c</fullName>
    <label>DERIVED_SUITE_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>