SFPracticeApp/main/default/objects/DBR__c/fields/DUP__c.field-meta.xml
<CustomField>
    <fullName>DUP__c</fullName>
    <label>DUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>