SFPracticeApp/main/default/objects/DBR__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <label>EBD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>