SFPracticeApp/main/default/objects/DBR__c/fields/EMPLOYEE_EMAIL_ID__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEE_EMAIL_ID__c</fullName>
    <label>EMPLOYEE_EMAIL_ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>