SFPracticeApp/main/default/objects/DBR__c/fields/EMPLOYEENAME__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEENAME__c</fullName>
    <label>EMPLOYEENAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>