SFPracticeApp/main/default/objects/DBR__c/fields/EMPNO__c.field-meta.xml
<CustomField>
    <fullName>EMPNO__c</fullName>
    <label>EMPNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>