SFPracticeApp/main/default/objects/DBR__c/fields/EXCLUSION__c.field-meta.xml
<CustomField>
    <fullName>EXCLUSION__c</fullName>
    <label>EXCLUSION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>