SFPracticeApp/main/default/objects/DBR__c/fields/EXP__c.field-meta.xml
<CustomField>
    <fullName>EXP__c</fullName>
    <label>EXP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>