SFPracticeApp/main/default/objects/DBR__c/fields/EXP_RANGE__c.field-meta.xml
<CustomField>
    <fullName>EXP_RANGE__c</fullName>
    <label>EXP_RANGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>