SFPracticeApp/main/default/objects/DBR__c/fields/FLEX_PROJECT__c.field-meta.xml
<CustomField>
    <fullName>FLEX_PROJECT__c</fullName>
    <label>FLEX_PROJECT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>