SFPracticeApp/main/default/objects/DBR__c/fields/FPP_TNM__c.field-meta.xml
<CustomField>
    <fullName>FPP_TNM__c</fullName>
    <label>FPP_TNM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>