SFPracticeApp/main/default/objects/DBR__c/fields/FRESHER_INDEX__c.field-meta.xml
<CustomField>
    <fullName>FRESHER_INDEX__c</fullName>
    <label>FRESHER_INDEX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>