SFPracticeApp/main/default/objects/DBR__c/fields/GRADE__c.field-meta.xml
<CustomField>
    <fullName>GRADE__c</fullName>
    <label>GRADE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>