SFPracticeApp/main/default/objects/DBR__c/fields/Group_Customer__c.field-meta.xml
<CustomField>
    <fullName>Group_Customer__c</fullName>
    <label>Group Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>