SFPracticeApp/main/default/objects/DBR__c/fields/HOME_COM_CODE__c.field-meta.xml
<CustomField>
    <fullName>HOME_COM_CODE__c</fullName>
    <label>HOME_COM_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>