SFPracticeApp/main/default/objects/DBR__c/fields/HR_MRGID__c.field-meta.xml
<CustomField>
    <fullName>HR_MRGID__c</fullName>
    <label>HR_MRGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>