SFPracticeApp/main/default/objects/DBR__c/fields/Indexing__c.field-meta.xml
<CustomField>
    <fullName>Indexing__c</fullName>
    <label>Indexing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>