SFPracticeApp/main/default/objects/DBR__c/fields/INDIAN__c.field-meta.xml
<CustomField>
    <fullName>INDIAN__c</fullName>
    <label>INDIAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>