SFPracticeApp/main/default/objects/DBR__c/fields/INVESTMENT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>INVESTMENT_FLAG__c</fullName>
    <label>INVESTMENT_FLAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>