SFPracticeApp/main/default/objects/DBR__c/fields/INVOICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE__c</fullName>
    <label>INVOICE_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>