SFPracticeApp/main/default/objects/DBR__c/fields/LEAVE_STAT__c.field-meta.xml
<CustomField>
    <fullName>LEAVE_STAT__c</fullName>
    <label>LEAVE_STAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>