SFPracticeApp/main/default/objects/DBR__c/fields/LOCATION__c.field-meta.xml
<CustomField>
    <fullName>LOCATION__c</fullName>
    <label>LOCATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>