SFPracticeApp/main/default/objects/DBR__c/fields/MULESOFT_HC__c.field-meta.xml
<CustomField>
    <fullName>MULESOFT_HC__c</fullName>
    <label>MULESOFT_HC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>