SFPracticeApp/main/default/objects/DBR__c/fields/NET_BILLED__c.field-meta.xml
<CustomField>
    <fullName>NET_BILLED__c</fullName>
    <label>NET_BILLED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>