SFPracticeApp/main/default/objects/DBR__c/fields/NET_FREE__c.field-meta.xml
<CustomField>
    <fullName>NET_FREE__c</fullName>
    <label>NET_FREE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>