SFPracticeApp/main/default/objects/DBR__c/fields/NET_LEAVE__c.field-meta.xml
<CustomField>
    <fullName>NET_LEAVE__c</fullName>
    <label>NET_LEAVE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>