SFPracticeApp/main/default/objects/DBR__c/fields/NET_NONBILLABLE__c.field-meta.xml
<CustomField>
    <fullName>NET_NONBILLABLE__c</fullName>
    <label>NET_NONBILLABLE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>