SFPracticeApp/main/default/objects/DBR__c/fields/NET_SUPPORT__c.field-meta.xml
<CustomField>
    <fullName>NET_SUPPORT__c</fullName>
    <label>NET_SUPPORT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>