SFPracticeApp/main/default/objects/DBR__c/fields/NET_TOTALDAYS__c.field-meta.xml
<CustomField>
    <fullName>NET_TOTALDAYS__c</fullName>
    <label>NET_TOTALDAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>