SFPracticeApp/main/default/objects/DBR__c/fields/ODC__c.field-meta.xml
<CustomField>
    <fullName>ODC__c</fullName>
    <label>ODC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>