SFPracticeApp/main/default/objects/DBR__c/fields/ONS_OFF_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ONS_OFF_FLAG__c</fullName>
    <label>ONS_OFF_FLAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>