SFPracticeApp/main/default/objects/DBR__c/fields/ONSITE__c.field-meta.xml
<CustomField>
    <fullName>ONSITE__c</fullName>
    <label>ONSITE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>