SFPracticeApp/main/default/objects/DBR__c/fields/Onsite_Offshore_flag__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Offshore_flag__c</fullName>
    <label>Onsite_Offshore_flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>