SFPracticeApp/main/default/objects/DBR__c/fields/PM_NAME__c.field-meta.xml
<CustomField>
    <fullName>PM_NAME__c</fullName>
    <label>PM_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>