SFPracticeApp/main/default/objects/DBR__c/fields/PRACCCDESC__c.field-meta.xml
<CustomField>
    <fullName>PRACCCDESC__c</fullName>
    <label>PRACCCDESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>