SFPracticeApp/main/default/objects/DBR__c/fields/PRACTICECOSTCENTER__c.field-meta.xml
<CustomField>
    <fullName>PRACTICECOSTCENTER__c</fullName>
    <label>PRACTICECOSTCENTER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>