SFPracticeApp/main/default/objects/DBR__c/fields/PRACTICEGROUP__c.field-meta.xml
<CustomField>
    <fullName>PRACTICEGROUP__c</fullName>
    <label>PRACTICEGROUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>