SFPracticeApp/main/default/objects/DBR__c/fields/Primary_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Supervisor__c</fullName>
    <label>Primary_Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>