SFPracticeApp/main/default/objects/DBR__c/fields/PROJ_MRGID__c.field-meta.xml
<CustomField>
    <fullName>PROJ_MRGID__c</fullName>
    <label>PROJ_MRGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>