SFPracticeApp/main/default/objects/DBR__c/fields/PROJECT_ACQUIRED_SKILL__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_ACQUIRED_SKILL__c</fullName>
    <label>PROJECT_ACQUIRED_SKILL</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>