SFPracticeApp/main/default/objects/DBR__c/fields/PROJECT_CLASSIFICATION__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_CLASSIFICATION__c</fullName>
    <label>PROJECT_CLASSIFICATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>