SFPracticeApp/main/default/objects/DBR__c/fields/PROJECT_SUPERVISOR__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_SUPERVISOR__c</fullName>
    <label>PROJECT_SUPERVISOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>