SFPracticeApp/main/default/objects/DBR__c/fields/PROJECTDEFN__c.field-meta.xml
<CustomField>
    <fullName>PROJECTDEFN__c</fullName>
    <label>PROJECTDEFN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>