SFPracticeApp/main/default/objects/DBR__c/fields/PROP_LVL__c.field-meta.xml
<CustomField>
    <fullName>PROP_LVL__c</fullName>
    <label>PROP_LVL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>