SFPracticeApp/main/default/objects/DBR__c/fields/RECENT_SKILLS__c.field-meta.xml
<CustomField>
    <fullName>RECENT_SKILLS__c</fullName>
    <label>RECENT_SKILLS</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>