SFPracticeApp/main/default/objects/DBR__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resources__c</referenceTo>
    <relationshipName>DBR</relationshipName>
    <type>Lookup</type>
</CustomField>