SFPracticeApp/main/default/objects/DBR__c/fields/REVISED_EXCLUSION__c.field-meta.xml
<CustomField>
    <fullName>REVISED_EXCLUSION__c</fullName>
    <label>REVISED_EXCLUSION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>