SFPracticeApp/main/default/objects/DBR__c/fields/RM_EMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>RM_EMP_NAME__c</fullName>
    <label>RM_EMP_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>