SFPracticeApp/main/default/objects/DBR__c/fields/ROLE__c.field-meta.xml
<CustomField>
    <fullName>ROLE__c</fullName>
    <label>ROLE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>