SFPracticeApp/main/default/objects/DBR__c/fields/ROLE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>ROLE_DESCRIPTION__c</fullName>
    <label>ROLE_DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>