SFPracticeApp/main/default/objects/DBR__c/fields/SAP_SUBPRAC_DESC__c.field-meta.xml
<CustomField>
    <fullName>SAP_SUBPRAC_DESC__c</fullName>
    <label>SAP_SUBPRAC_DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>