SFPracticeApp/main/default/objects/DBR__c/fields/SECTOR__c.field-meta.xml
<CustomField>
    <fullName>SECTOR__c</fullName>
    <label>SECTOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>