SFPracticeApp/main/default/objects/DBR__c/fields/SMU__c.field-meta.xml
<CustomField>
    <fullName>SMU__c</fullName>
    <label>SMU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>