SFPracticeApp/main/default/objects/DBR__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>