SFPracticeApp/main/default/objects/DBR__c/fields/TM_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>TM_EMP_NO__c</fullName>
    <label>TM_EMP_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>