SFPracticeApp/main/default/objects/DBR__c/fields/TM_NAME__c.field-meta.xml
<CustomField>
    <fullName>TM_NAME__c</fullName>
    <label>TM_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>