SFPracticeApp/main/default/objects/DBR__c/fields/TOTALDAYS__c.field-meta.xml
<CustomField>
    <fullName>TOTALDAYS__c</fullName>
    <label>TOTALDAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>