SFPracticeApp/main/default/objects/DBR__c/fields/TRAINING_SKILLS__c.field-meta.xml
<CustomField>
    <fullName>TRAINING_SKILLS__c</fullName>
    <label>TRAINING_SKILLS</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>