SFPracticeApp/main/default/objects/DBR__c/fields/W_EXP__c.field-meta.xml
<CustomField>
    <fullName>W_EXP__c</fullName>
    <label>W_EXP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>