SFPracticeApp/main/default/objects/DBR__c/fields/ZLTYPE__c.field-meta.xml
<CustomField>
    <fullName>ZLTYPE__c</fullName>
    <label>ZLTYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>