SFPracticeApp/main/default/objects/DBR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Indexing__c</columns>
    <columns>DUP__c</columns>
    <columns>EMPNO__c</columns>
    <columns>EMPLOYEENAME__c</columns>
    <columns>SAP_SUBPRAC_DESC__c</columns>
    <columns>SMU__c</columns>
    <columns>SECTOR__c</columns>
    <columns>Group_Customer__c</columns>
    <columns>FPP_TNM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billability_Status__c</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>DERIVED_EMP_COUNTRY__c</field>
        <operation>equals</operation>
        <value>USA,Canada</value>
    </filters>
    <label>All Records</label>
</ListView>